Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o r18141 JdbcQueue.java: fixed bug wich caused MsgUnitStore size to be wrong after an Overflow

 o r18131 added XmlRpcCustomProxy to XMLRPC to allow custom non-standard clients to access the XMLRPC protocol
          directly. Can be used for tunnelling standard xmlBlaster operations such subscribe publish .... to 
	  other methods specified by the customer

 o r18124 Added getType() getVersion() to I_Manager.java
          If you have coded a security plugin please add those methods

 o r18108 Fixed LOCAL protocol without callback configuration (e.g. FilePollerPlugin and FileWatcherPlugin)
          The fallback was SOCKET and the cb ping failed
	  Now the LOCAL client is pinged properly by the server (to allow resource cleanup)

 o r18077 HtPasswd SecurityQos
          Added coding to base64 endoce/decode the password (prefix "__base64:"), needed if it contains invalid XML chars '&' and '<'

 o r18076 XmlScriptInterpreter: Fixed xml encoding of parsed key and qos ('&' and '<' chars)

 o r18070 JMX reactivateDispatcherThread() method added for error diagnostic of inactive callback thread
 o r18069 ServerDispatchManager.java Smaller synchronize for this.connectionStatusListeners

 o r18066 Added stdout and stderr/stack trace redirector to log file
         activate with
         -xmlBlaster/stdoutStderrToLogging true
         or
         -xmlBlaster/stdoutStderrToLogging true -xmlBlaster/stdoutSuppressSet sometoken;someothertoken  -xmlBlaster/stderrSuppressSet sometoken;someothertoken

 o r18059 Introduced EventPlugin which executes shell command (refactored EventPlugin.java)
    can be used to kill xmlBlaster on events or do other nice things
    For an example see xmlBlaster/config/xmlBlasterPlugins.xml.template "execEvents"
