@@ -4,6 +4,11 @@ The "r99999" numbers are Subversion revision numbers.
 Changes for current svn
 =======================
 
+ o r18143 SmtpClient.java properties added
+          mail.smtp.socketFactory.port
+	  mail.smtp.socketFactory.class
+	  mail.smtp.starttls.enable
+
  o r18141 JdbcQueue.java: fixed bug wich caused MsgUnitStore size to be wrong after an Overflow
 
  o r18131 added XmlRpcCustomProxy to XMLRPC to allow custom non-standard clients to access the XMLRPC protocol
